# eve-sd

./: AGENTS.md  CHANGELOG.md  README.md  planned-refactors.md  pyproject.toml  textual-tui-plan.md
.changelog.d/templates/: entry_title_template.md.j2  new_fragment.md.j2
.github/agents/: DocumentationWriter.agent.md
.github/skills/test-writer/: SKILL.md
.github/workflows/: pypi-publish.yaml
dev-docs/: eve-static-data-roadmap.md  schema-update-instructions.md
dev-docs/plans/: README.md  README.txt  master-plan.md  planned-refactors.md  project-plan.md  roadmap.md
scripts/: exports.py  gen_table_defs.py  sde_report_files.py  tools_testfoo.py
scripts/dev/: yaml_json_roundtrip.py
scripts/dev/loading_db/: load_jsonl_db.py  load_yaml_db.py
src/eve_sd/: __init__.py  sde_tools.py  settings.py
src/eve_sd/cli/: docs.py  helpers.py  main_typer.py  unpack_sde.py  version.py  view_settings.py
src/eve_sd/db/: helpers.py  load_datasets.py  models.py  query.py  table_defs.sql
src/eve_sd/exports/: __init__.py
src/eve_sd/helpers/: http_client.py  json_io.py  load_raw_datasets.py  save_text_file.py  sde_metadata.py  sde_unpack.py  settings_factory.py  yaml_io.py
src/eve_static_data/: __init__.py  logging_config.py  schema-update-instructions.md  sde_tools.py  settings.py  yaml_validation.py  yaml_validation_2.py
src/eve_static_data/access/: yaml_datasets.py  yaml_file_datasets_dc.py
src/eve_static_data/cli/: config_info.py  docs.py  helpers.py  main_typer.py  sde_export.py  sde_network.py  sde_unpack.py  sde_validate.py  unpack_sde.py  version.py  view_settings.py
src/eve_static_data/db/: helpers.py  insert_records.py  load_datasets.py  load_jsonl_datasets.py  load_yaml_datasets.py  models.py  models_2.py  query.py  request_records.py  table_defs.sql
src/eve_static_data/docs/: __init__.py  eve_static_data_docs.md
src/eve_static_data/helpers/: app_data.py  dict_diagnostics.py  expand_multidict.py  http_client.py  json_io.py  jsonl_reader.py  load_raw_datasets.py  save_text_file.py  schema_report_2.py  sde_directory.py  sde_info.py  sde_metadata.py  sde_unpack.py  settings_factory.py  write_dicts_to_csv.py  yaml_io.py  yaml_loader.py
src/eve_static_data/models/: common.py  dataset_filenames.py  yaml_datasets.py  yaml_records.py
src/eve_static_data/record_loader/: jsonl_format.py  protocols.py  yaml_format.py
tests/eve_static_data/: test_validation_markdown_report.py
(+174 files in other folders)
