[project]
name = "pfmsoft-eve-sd"
version = "0.4.1"
description = "A CLI and API for Eve Online Static Data downloading and use."
readme = "README.md"
authors = [{ name = "Chad Lowe", email = "pfmsoft.dev@gmail.com" }]
requires-python = ">=3.14"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "httpx2>=2.3.0",
    "mdformat>=1.0.0",
    "mdformat-gfm>=1.0.0",
    "more-itertools>=11.1.0",
    "pfmsoft-eve-snippets>=0.1.3",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.11.0",
    "pyyaml>=6.0.3",
    "typer>=0.20.0",
    "whenever>=0.9.5",
]

[project.scripts]
eve-sd = "pfmsoft.eve_sd.cli.main_typer:app"

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"

# For a namespaced project
# [tool.uv.build-backend]
# module-name = "pfmsoft.eve_snippets"

[project.urls]
Documentation = "https://github.com/DonalChilde/pfmsoft-eve-sd#readme"
# Documentation_rtd = "https://pfmsoft-eve-sd.readthedocs.io"
Issues = "https://github.com/DonalChilde/pfmsoft-eve-sd/issues"
Source = "https://github.com/DonalChilde/pfmsoft-eve-sd"

[dependency-groups]
# Dev dependencies
# https://docs.astral.sh/uv/concepts/projects/dependencies/#development-dependencies
# https://docs.astral.sh/uv/concepts/projects/dependencies/#dependency-groups
dev = [
    { include-group = "lint" },
    { include-group = "test" },
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.13.1",

]
lint = ["ruff>=0.13.1"]
test = ["pytest>=8.4.2", "pytest-cov>=4.0.0", "rich>=13.0.0"]
# Documentation building dependencies like Sphinx
doc = []

[tool.pytest.ini_options]
pythonpath = "src"
log_file = "logs/tests.log"
log_file_date_format = "%Y-%m-%dT%H:%M:%S.%f%z"
log_file_format = "%(asctime)s %(levelname)s:%(funcName)s: %(message)s [in %(pathname)s:%(lineno)d]"
log_file_level = "INFO"
norecursedirs = "tests/old"

[tool.coverage.run]
branch = true
parallel = true
# omit = [""]

[tool.ruff.lint]
select = ["B", "UP", "D", "DOC", "FIX", "I", "F401"]
# non-imperative-mood (D401)
ignore = ["D401", "D101"]
# extend-select = ["I"]


[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 88

[tool.uv]
exclude-newer = "1 week"


# Don't wait for internal package updates.
[tool.uv.exclude-newer-package]
pfmsoft-eve-snippets = false
